@@ -1,3 +1,8 @@
+2002-10-09  AIDA Shinra <aida-s@jcom.home.ne.jp>
+
+	* [w3m-dev 03336] proxy check for https authorization:
+	* url.c (HTTPrequest): check CONNECT request for ssl
+
 2002-10-06  Hiroyuki Ito <hito@crl.go.jp>
 
 	* [w3m-dev 03333] x11 image animation
